--- a/Experiment1/app/src/main/res/values/strings.xml
+++ b/Experiment1/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Experiment1</string>
+    <string name="To">To</string>
+    <string name="Message">Message</string>
+    <string name="Send">Send</string>
+    <array name="s">
+    <item>light</item>
+    <item>amber</item>
+    <item>brown</item>
+    <item>dark</item>
+    </array>
 </resources>
