--- a/Stopwatch/app/src/main/res/values/strings.xml
+++ b/Stopwatch/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="reset">Reset</string>
+    <string name="pause">start dialog</string>
+    <string name="dialog">this is a dialog</string>
 </resources>
