--- a/Starbuzz/app/src/main/res/values/strings.xml
+++ b/Starbuzz/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Starbuzz</string>
     <string name="favorite">favorite</string>
+    <string name="favorites">Your favorite drinks</string>
     <string-array name="options">
         <item>Drinks</item>
         <item>Food</item>
